adds win state buttons for player1 and player2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<body>
 			<div id="results">
 				<input type="submit" id ="player-1-win" value="Player 1" />
-				<input type="submit" id ="start-game" value="Start Game" />
+				<input type="submit" id ="start-game" value="New Game" />
 				<input type="submit" id ="player-2-win" value="Player 2" />
 				<h1>CONNECT 4</h1>
 			</div>
